# SpaceShooter

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: ball.cpp
~ASEPRITE/: Auto cannon bullet.aseprite
